target/generated-sources/antlr4/com/cobol/translator/grammar/JCLParser.java
// Generated from com/cobol/translator/grammar/JCL.g4 by ANTLR 4.13.1
package com.cobol.translator.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class JCLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		JOB=10, EXEC=11, DD=12, STEP=13, PGM=14, PROC=15, DSN=16, DISP=17, DCB=18, 
		SPACE=19, UNIT=20, VOL=21, SER=22, SYSOUT=23, DUMMY=24, RECFM=25, LRECL=26, 
		BLKSIZE=27, DSORG=28, NEW=29, OLD=30, SHR=31, MOD=32, CATLG=33, DELETE=34, 
		KEEP=35, PASS=36, TRK=37, CYL=38, BLKS=39, FB=40, VB=41, FBA=42, VBA=43, 
		U=44, PS=45, PO=46, DA=47, SYSDA=48, SYSALLDA=49, NUMBER=50, IDENTIFIER=51, 
		STRING=52, COMMENT=53, WS=54, CONTINUATION=55;
	public static final int
		RULE_jclFile = 0, RULE_statement = 1, RULE_jobStatement = 2, RULE_stepStatement = 3, 
		RULE_commentLine = 4, RULE_pgmExec = 5, RULE_procExec = 6, RULE_ddStatements = 7, 
		RULE_ddStatement = 8, RULE_ddDummy = 9, RULE_ddInline = 10, RULE_ddConcat = 11, 
		RULE_ddParameters = 12, RULE_ddParameter = 13, RULE_dsnParameter = 14, 
		RULE_dispParameter = 15, RULE_dcbParameter = 16, RULE_dcbSubParameter = 17, 
		RULE_spaceParameter = 18, RULE_unitParameter = 19, RULE_volserParameter = 20, 
		RULE_sysoutParameter = 21, RULE_recfmParameter = 22, RULE_lreclParameter = 23, 
		RULE_blksizeParameter = 24, RULE_otherParameter = 25, RULE_accountInfo = 26, 
		RULE_jobParameters = 27, RULE_execParameter = 28, RULE_disposition = 29, 
		RULE_normalDisp = 30, RULE_abnormalDisp = 31, RULE_spaceUnit = 32, RULE_primary = 33, 
		RULE_secondary = 34, RULE_directory = 35, RULE_recfmValue = 36, RULE_dsorgValue = 37, 
		RULE_unitValue = 38, RULE_sysoutClass = 39, RULE_volserValue = 40, RULE_datasetName = 41, 
		RULE_datasetComponent = 42, RULE_programName = 43, RULE_procName = 44, 
		RULE_jobName = 45, RULE_stepName = 46, RULE_ddName = 47, RULE_paramName = 48, 
		RULE_paramValue = 49, RULE_number = 50, RULE_comment = 51;
	private static String[] makeRuleNames() {
		return new String[] {
			"jclFile", "statement", "jobStatement", "stepStatement", "commentLine", 
			"pgmExec", "procExec", "ddStatements", "ddStatement", "ddDummy", "ddInline", 
			"ddConcat", "ddParameters", "ddParameter", "dsnParameter", "dispParameter", 
			"dcbParameter", "dcbSubParameter", "spaceParameter", "unitParameter", 
			"volserParameter", "sysoutParameter", "recfmParameter", "lreclParameter", 
			"blksizeParameter", "otherParameter", "accountInfo", "jobParameters", 
			"execParameter", "disposition", "normalDisp", "abnormalDisp", "spaceUnit", 
			"primary", "secondary", "directory", "recfmValue", "dsorgValue", "unitValue", 
			"sysoutClass", "volserValue", "datasetName", "datasetComponent", "programName", 
			"procName", "jobName", "stepName", "ddName", "paramName", "paramValue", 
			"number", "comment"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'//'", "','", "'='", "'*'", "'DATA'", "'('", "')'", "'.'", "'&'", 
			"'JOB'", "'EXEC'", "'DD'", "'STEP'", "'PGM'", "'PROC'", "'DSN'", "'DISP'", 
			"'DCB'", "'SPACE'", "'UNIT'", "'VOL'", "'SER'", "'SYSOUT'", "'DUMMY'", 
			"'RECFM'", "'LRECL'", "'BLKSIZE'", "'DSORG'", "'NEW'", "'OLD'", "'SHR'", 
			"'MOD'", "'CATLG'", "'DELETE'", "'KEEP'", "'PASS'", "'TRK'", "'CYL'", 
			"'BLKS'", "'FB'", "'VB'", "'FBA'", "'VBA'", "'U'", "'PS'", "'PO'", "'DA'", 
			"'SYSDA'", "'SYSALLDA'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, "JOB", "EXEC", 
			"DD", "STEP", "PGM", "PROC", "DSN", "DISP", "DCB", "SPACE", "UNIT", "VOL", 
			"SER", "SYSOUT", "DUMMY", "RECFM", "LRECL", "BLKSIZE", "DSORG", "NEW", 
			"OLD", "SHR", "MOD", "CATLG", "DELETE", "KEEP", "PASS", "TRK", "CYL", 
			"BLKS", "FB", "VB", "FBA", "VBA", "U", "PS", "PO", "DA", "SYSDA", "SYSALLDA", 
			"NUMBER", "IDENTIFIER", "STRING", "COMMENT", "WS", "CONTINUATION"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JCL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JCLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JclFileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(JCLParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public JclFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jclFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JCLListener ) ((JCLListener)listener).enterJclFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JCLListener ) ((JCLListener)listener).exitJclFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JCLVisitor ) return ((JCLVisitor<? extends T>)visitor).visitJclFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JclFileContext jclFile() throws RecognitionException {
		JclFileContext _localctx = new JclFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_jclFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(104);
				statement();
				}
				}
				setState(107); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__0 || _la==COMMENT );
			setState(109);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public JobStatementContext jobStatement() {
			return getRuleContext(JobStatementContext.class,0);
		}
		public StepStatementContext stepStatement() {
			return getRuleContext(StepStatementContext.class,0);
		}
		public CommentLineContext commentLine() {
			return getRuleContext(CommentLineContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JCLListener ) ((JCLListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JCLListener ) ((JCLListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JCLVisitor ) return ((JCLVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(114);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				jobStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				stepStatement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(113);
				commentLine();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JobStatementContext extends ParserRuleContext {
		public JobNameContext jobName() {
			return getRuleContext(JobNameContext.class,0);
		}
		public TerminalNode JOB() { return getToken(JCLParser.JOB, 0); }
		public AccountInfoContext accountInfo() {
			return getRuleContext(AccountInfoContext.class,0);
		}
		public List<JobParametersContext> jobParameters() {
			return getRuleContexts(JobParametersContext.class);
		}
		public JobParametersContext jobParameters(int i) {
			return getRuleContext(JobParametersContext.class,i);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public JobStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jobStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JCLListener ) ((JCLListener)listener).enterJobStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JCLListener ) ((JCLListener)listener).exitJobStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JCLVisitor ) return ((JCLVisitor<? extends T>)visitor).visitJobStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JobStatementContext jobStatement() throws RecognitionException {
		JobStatementContext _localctx = new JobStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_jobStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(T__0);
			setState(117);
			jobName();
			setState(118);
			match(JOB);
			setState(119);
			accountInfo();
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(120);
				match(T__1);
				setState(121);
				jobParameters();
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(128);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(127);
				comment();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StepStatementContext extends ParserRuleContext {
		public StepNameContext stepName() {
			return getRuleContext(StepNameContext.class,0);
		}
		public TerminalNode EXEC() { return getToken(JCLParser.EXEC, 0); }
		public PgmExecContext pgmExec() {
			return getRuleContext(PgmExecContext.class,0);
		}
		public ProcExecContext procExec() {
			return getRuleContext(ProcExecContext.class,0);
		}
		public List<ExecParameterContext> execParameter() {
			return getRuleContexts(ExecParameterContext.class);
		}
		public ExecParameterContext execParameter(int i) {
			return getRuleContext(ExecParameterContext.class,i);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public List<DdStatementsContext> ddStatements() {
			return getRuleContexts(DdStatementsContext.class);
		}
		public DdStatementsContext ddStatements(int i) {
			return getRuleContext(DdStatementsContext.class,i);
		}
		public StepStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stepStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JCLListener ) ((JCLListener)listener).enterStepStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JCLListener ) ((JCLListener)listener).exitStepStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JCLVisitor ) return ((JCLVisitor<? extends T>)visitor).visitStepStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StepStatementContext stepStatement() throws RecognitionException {
		StepStatementContext _localctx = new StepStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stepStatement);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(T__0);
			setState(131);
			stepName();
			setState(132);
			match(EXEC);
			setState(135);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PGM:
				{
				setState(133);
				pgmExec();
				}
				break;
			case PROC:
				{
				setState(134);
				procExec();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(137);
				match(T__1);
				setState(138);
				execParameter();
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(145);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(144);
				comment();
				}
				break;
			}
			setState(150);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(147);
					ddStatements();
					}
					} 
				}
				setState(152);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommentLineContext extends ParserRuleContext {
		public TerminalNode COMMENT() { return getToken(JCLParser.COMMENT, 0); }
		public CommentLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commentLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JCLListener ) ((JCLListener)listener).enterCommentLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JCLListener ) ((JCLListener)listener).exitCommentLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JCLVisitor ) return ((JCLVisitor<? extends T>)visitor).visitCommentLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommentLineContext commentLine() throws RecognitionException {
		CommentLineContext _localctx = new CommentLineContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_commentLine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			match(COMMENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PgmExecContext extends ParserRuleContext {
		public TerminalNode PGM() { return getToken(JCLParser.PGM, 0); }
		public ProgramNameContext programName() {
			return getRuleContext(ProgramNameContext.class,0);
		}
		public PgmExecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pgmExec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JCLListener ) ((JCLListener)listener).enterPgmExec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JCLListener ) ((JCLListener)listener).exitPgmExec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JCLVisitor ) return ((JCLVisitor<? extends T>)visitor).visitPgmExec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PgmExecContext pgmExec() throws RecognitionException {
		PgmExecContext _localctx = new PgmExecContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_pgmExec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(PGM);
			setState(156);
			match(T__2);
			setState(157);
			programName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProcExecContext extends ParserRuleContext {
		public TerminalNode PROC() { return getToken(JCLParser.PROC, 0); }
		public ProcNameContext procName() {
			return getRuleContext(ProcNameContext.class,0);
		}
		public ProcExecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procExec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JCLListener ) ((JCLListener)listener).enterProcExec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JCLListener ) ((JCLListener)listener).exitProcExec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JCLVisitor ) return ((JCLVisitor<? extends T>)visitor).visitProcExec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcExecContext procExec() throws RecognitionException {
		ProcExecContext _localctx = new ProcExecContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_procExec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(PROC);
			setState(160);
			match(T__2);
			setState(161);
			procName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DdStatementsContext extends ParserRuleContext {
		public DdStatementContext ddStatement() {
			return getRuleContext(DdStatementContext.class,0);
		}
		public DdDummyContext ddDummy() {
			return getRuleContext(DdDummyContext.class,0);
		}
		public DdInlineContext ddInline() {
			return getRuleContext(DdInlineContext.class,0);
		}
		public DdConcatContext ddConcat() {
			return getRuleContext(DdConcatContext.class,0);
		}
		public DdStatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ddStatements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JCLListener ) ((JCLListener)listener).enterDdStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JCLListener ) ((JCLListener)listener).exitDdStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JCLVisitor ) return ((JCLVisitor<? extends T>)visitor).visitDdStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DdStatementsContext ddStatements() throws RecognitionException {
		DdStatementsContext _localctx = new DdStatementsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ddStatements);
		try {
			setState(167);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(163);
				ddStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(164);
				ddDummy();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(165);
				ddInline();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(166);
				ddConcat();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DdStatementContext extends ParserRuleContext {
		public DdNameContext ddName() {
			return getRuleContext(DdNameContext.class,0);
		}
		public TerminalNode DD() { return getToken(JCLParser.DD, 0); }
		public DdParametersContext ddParameters() {
			return getRuleContext(DdParametersContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public DdStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ddStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JCLListener ) ((JCLListener)listener).enterDdStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JCLListener ) ((JCLListener)listener).exitDdStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JCLVisitor ) return ((JCLVisitor<? extends T>)visitor).visitDdStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DdStatementContext ddStatement() throws RecognitionException {
		DdStatementContext _localctx = new DdStatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ddStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			match(T__0);
			setState(170);
			ddName();
			setState(171);
			match(DD);
			setState(172);
			ddParameters();
			setState(174);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(173);
				comment();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DdDummyContext extends ParserRuleContext {
		public DdNameContext ddName() {
			return getRuleContext(DdNameContext.class,0);
		}
		public TerminalNode DD() { return getToken(JCLParser.DD, 0); }
		public TerminalNode DUMMY() { return getToken(JCLParser.DUMMY, 0); }
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public DdDummyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ddDummy; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JCLListener ) ((JCLListener)listener).enterDdDummy(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JCLListener ) ((JCLListener)listener).exitDdDummy(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JCLVisitor ) return ((JCLVisitor<? extends T>)visitor).visitDdDummy(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DdDummyContext ddDummy() throws RecognitionException {
		DdDummyContext _localctx = new DdDummyContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_ddDummy);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			match(T__0);
			setState(177);
			ddName();
			setState(178);
			match(DD);
			setState(179);
			match(DUMMY);
			setState(181);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(180);
				comment();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
